envoy/envoy.yaml
static_resources:
    listeners:
        -   name: listener_0
            address:
                socket_address:
                    address: 0.0.0.0
                    port_value: 10000
            filter_chains:
                -   filters:
                        -   name: envoy.filters.network.http_connection_manager
                            typed_config:
                                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                                stat_prefix: ingress_http
                                access_log:
                                    -   name: envoy.access_loggers.file
                                        typed_config:
                                            "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                                            path: /dev/stdout
                                http_filters:
                                    -   name: envoy.filters.http.router
                                route_config:
                                    name: local_route
                                    virtual_hosts:
                                        -   name: local_service
                                            domains: [ "*" ]
                                            routes:
                                                -   match:
                                                        prefix: "/"
                                                    route:
                                                        cluster: service_httpbin
                                                        retry_policy:
                                                            retry_on: "5xx"
                                                            num_retries: 0

    clusters:
        -   name: service_httpbin
            connect_timeout: 2s
            type: LOGICAL_DNS
            dns_lookup_family: V4_ONLY
            circuit_breakers:
                thresholds:
                    max_pending_requests: 5
                    max_requests: 5
                    max_retries: 3
            load_assignment:
                cluster_name: service_httpbin
                endpoints:
                    -   lb_endpoints:
                            -   endpoint:
                                    address:
                                        socket_address:
                                            address: httpbin
                                            port_value: 80
